--- a/src/app/modules/authorized/authorized.component.html
+++ b/src/app/modules/authorized/authorized.component.html
@@ -1,8 +1,8 @@
 <div class="g-main-container">
-    <aside>
+    <aside class="g-aside-menu">
         <app-sidebar></app-sidebar>
     </aside>
-    <main>
+    <main class="g-main-component">
         <router-outlet></router-outlet>
     </main>
 </div>
