--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,9 +26,7 @@
 подобных виджетов. Обычно файлов в components/ много, если приложение или сайт
 состоит из множества мелких модулей.
 ========================================================================== */
-//@import 'components/buttons';
-//@import 'components/lists';
-//@import 'components/tabs';
+@import '/assets/styles/components/module';
 
 /* PAGES - Если у вас есть стили, зависящие от страницы, лучше положить их в
 папку pages/, в файл, названный в честь страницы. Например, не редкость – иметь
