--- a/src/app/modules/authorized/home/home.component.html
+++ b/src/app/modules/authorized/home/home.component.html
@@ -1,8 +1,21 @@
-<a routerLink="/home" routerLinkActive="active">
-    Рабочий стол
-</a>
-<a routerLink="sales" routerLinkActive="active">
-    Продажи
-</a>
+<header class="g-header">
+    <div class="g-header__title">
+        Рабочий стол
+    </div>
+    <div class="g-header__nav">
+        <ul>
+            <li class="g-header__nav-item" routerLinkActive="g-header__nav-item_active" [routerLinkActiveOptions]="{exact:true}">
+                <a routerLink="/home">
+                    Рабочий стол
+                </a>
+            </li>
+            <li class="g-header__nav-item" routerLinkActive="g-header__nav-item_active" [routerLinkActiveOptions]="{exact:true}">
+                <a routerLink="sales">
+                    Продажи
+                </a>
+            </li>
+        </ul>
+    </div>
+</header>
 
 <router-outlet></router-outlet>
