Add auth component

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <div class="nav-inner">
         <div class="nav-item nav-item--toggle">
             <div class="nav-item-icon">
-                <i class="icon icon-menu"></i>
+                <fa name="bars"></fa>
             </div>
             <div class="nav-item-text">
                 <img data-v-16eb37d0="" src="/assets/images/logo-menu.png" alt="">
