--- a/src/app/modules/authorized/authorized.component.html
+++ b/src/app/modules/authorized/authorized.component.html
@@ -1,8 +1,6 @@
-<div class="g-main-container">
-    <aside class="g-aside-menu">
-        <app-sidebar></app-sidebar>
-    </aside>
-    <main class="g-main-component">
-        <router-outlet></router-outlet>
-    </main>
-</div>
+<aside class="g-sidebar">
+    <app-sidebar></app-sidebar>
+</aside>
+<main class="g-content">
+    <router-outlet></router-outlet>
+</main>
